--- a/listings.html
+++ b/listings.html
@@ -1,1 +1,70 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Rentals • ARH Rentals</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
+</head>
+<body>
 
+<header class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <div class="logo"></div>
+      <div>
+        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
+      </div>
+    </a>
+    <nav class="menu">
+      <a href="listings.html">Rentals</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="legal.html">Legal</a>
+      <a class="btn btn-primary" href="post.html">Post Property</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section class="hero">
+    <h2 style="margin:0">Hisar Rentals</h2>
+    <p style="margin-top:8px;color:var(--muted)">Premium listings with clean filters. Contact details are available after paid unlock.</p>
+  </section>
+
+  <div class="layout">
+    <aside class="filters card">
+      <div class="card-body">
+        <h3 style="margin:0">Filters</h3>
+        <div class="hr"></div>
+
+        <label class="small">PIN Code</label>
+        <input id="fPin" class="input filter-input" placeholder="125001"/>
+
+        <label class="small">Type</label>
+        <select id="fType" class="filter-input">
+          <option value="">Any</option>
+          <option>House</option>
+          <option>Shop</option>
+          <option>Office</option>
+        </select>
+
+        <label class="small">Max Rent</label>
+        <input id="fMax" class="input filter-input" placeholder="15000"/>
+
+        <div class="hr"></div>
+        <a class="btn" href="pricing.html">See Pricing</a>
+      </div>
+    </aside>
+
+    <section>
+      <div id="listingWrap" class="listings"></div>
+      <footer class="footer">
+        © ARH Rentals • <a href="legal.html">Legal</a>
+      </footer>
+    </section>
+  </div>
+</main>
+
+<script src="assets/app.js"></script>
+</body>
+</html>
