--- a/legal.html
+++ b/legal.html
@@ -1,1 +1,57 @@
+<!doctype html>
+<html lang="en">
+<head>
+  <meta charset="utf-8"/>
+  <meta name="viewport" content="width=device-width,initial-scale=1"/>
+  <title>Legal • ARH Rentals</title>
+  <link rel="stylesheet" href="assets/styles.css"/>
+</head>
+<body>
 
+<header class="nav">
+  <div class="container nav-inner">
+    <a class="brand" href="index.html">
+      <div class="logo"></div>
+      <div>
+        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
+      </div>
+    </a>
+    <nav class="menu">
+      <a href="listings.html">Rentals</a>
+      <a href="pricing.html">Pricing</a>
+      <a href="legal.html">Legal</a>
+      <a class="btn btn-primary" href="post.html">Post Property</a>
+    </nav>
+  </div>
+</header>
+
+<main class="container">
+  <section class="hero">
+    <h2 style="margin:0">Legal & Disclaimers</h2>
+    <p style="color:var(--muted);margin-top:8px">Zero-responsibility classified platform (Phase 1).</p>
+  </section>
+
+  <div class="card" style="margin-top:16px">
+    <div class="card-body">
+      <h3>Key Disclaimers</h3>
+      <ul style="color:var(--muted);line-height:1.8">
+        <li>ARH Rentals is a classified advertisement & information access platform only.</li>
+        <li>We do not verify ownership, identity, documents, photos, or listing claims.</li>
+        <li>All transactions, negotiations, visits, and agreements are strictly user-to-user.</li>
+        <li>OTP is used for access control/spam prevention only; it is not identity verification.</li>
+        <li>Paid plans are for digital services (ad visibility / information access) only; no results guarantee.</li>
+        <li>Expired listings are auto-hidden (not deleted) and can be renewed by the advertiser.</li>
+      </ul>
+
+      <div class="hr"></div>
+      <h3>Contact</h3>
+      <p class="sub">Starting City: Hisar (PIN limited in Phase 1).</p>
+    </div>
+  </div>
+
+  <footer class="footer">
+    © ARH Rentals
+  </footer>
+</main>
+</body>
+</html>
