--- a/legal.html
+++ b/legal.html
@@ -1,57 +1,69 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="utf-8"/>
-  <meta name="viewport" content="width=device-width,initial-scale=1"/>
-  <title>Legal • ARH Rentals</title>
-  <link rel="stylesheet" href="assets/styles.css"/>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Legal & Disclaimer — ARH Rentals</title>
+  <link rel="stylesheet" href="assets/styles.css" />
 </head>
+
 <body>
 
-<header class="nav">
-  <div class="container nav-inner">
-    <a class="brand" href="index.html">
-      <div class="logo"></div>
-      <div>
-        <h1>ARH Rentals <small>by Anjani Real Heights</small></h1>
-      </div>
-    </a>
-    <nav class="menu">
-      <a href="listings.html">Rentals</a>
-      <a href="pricing.html">Pricing</a>
-      <a href="legal.html">Legal</a>
-      <a class="btn btn-primary" href="post.html">Post Property</a>
-    </nav>
-  </div>
+<header>
+  <div class="logo">ARH Rentals</div>
 </header>
 
-<main class="container">
-  <section class="hero">
-    <h2 style="margin:0">Legal & Disclaimers</h2>
-    <p style="color:var(--muted);margin-top:8px">Zero-responsibility classified platform (Phase 1).</p>
-  </section>
+<section class="page">
+  <h1>Legal Disclaimer & Terms</h1>
 
-  <div class="card" style="margin-top:16px">
-    <div class="card-body">
-      <h3>Key Disclaimers</h3>
-      <ul style="color:var(--muted);line-height:1.8">
-        <li>ARH Rentals is a classified advertisement & information access platform only.</li>
-        <li>We do not verify ownership, identity, documents, photos, or listing claims.</li>
-        <li>All transactions, negotiations, visits, and agreements are strictly user-to-user.</li>
-        <li>OTP is used for access control/spam prevention only; it is not identity verification.</li>
-        <li>Paid plans are for digital services (ad visibility / information access) only; no results guarantee.</li>
-        <li>Expired listings are auto-hidden (not deleted) and can be renewed by the advertiser.</li>
-      </ul>
+  <p>
+    ARH Rentals is a digital information-access platform designed to help
+    property owners and tenants discover rental opportunities.
+  </p>
 
-      <div class="hr"></div>
-      <h3>Contact</h3>
-      <p class="sub">Starting City: Hisar (PIN limited in Phase 1).</p>
-    </div>
-  </div>
+  <h2>No Brokerage</h2>
+  <p>
+    ARH Rentals does not act as a property broker, agent, or mediator.
+    We only provide access to information shared by property owners.
+  </p>
 
-  <footer class="footer">
-    © ARH Rentals
-  </footer>
-</main>
+  <h2>No Guarantee</h2>
+  <p>
+    We do <strong>not guarantee or assure</strong> that users will receive
+    rental leads, responses, or successful transactions.
+    Lead generation depends on market demand, location, pricing,
+    and user activity.
+  </p>
+
+  <h2>No Responsibility for Deals</h2>
+  <p>
+    Any communication, visit, negotiation, payment, or agreement
+    happens directly between the owner and tenant.
+    ARH Rentals is <strong>not responsible</strong> for disputes, losses,
+    fraud, or misrepresentation.
+  </p>
+
+  <h2>Information Accuracy</h2>
+  <p>
+    Listing details are provided by owners. ARH Rentals does not verify
+    ownership, legality, or accuracy of property details.
+  </p>
+
+  <h2>Service Area</h2>
+  <p>
+    Currently operational only in selected areas of Hisar
+    (Phase 1: 125001, 125005).
+  </p>
+
+  <h2>Acceptance</h2>
+  <p>
+    By using this website, you agree to all terms and disclaimers mentioned above.
+  </p>
+</section>
+
+<footer>
+  <p>© 2025 ARH Rentals</p>
+</footer>
+
 </body>
 </html>
