--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </header>
 
   <section class="hero">
-    <h1>Find Rental Properties in Hisar</h1>
+    <h1>Find Rental Properties in Hisar (LIVE)</h1>
     <p>Flats • Houses • Shops</p>
 
     <div class="pincode-box">
