--- a/index.html
+++ b/index.html
@@ -1,14 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>ARH Rentals — Hisar</title>
+<header class="site-header">
+  <div class="header-left">
+    <div class="logo">
+      <strong>ARH</strong><span>Rentals</span>
+    </div>
+  </div>
 
-  <!-- ✅ CORRECT CSS PATH -->
-  <link rel="stylesheet" href="assets/styles.css" />
-</head>
-
+  <nav class="header-right">
+    <a href="/" class="nav-link">Home</a>
+    <a href="#listings" class="nav-link">Listings</a>
+    <a href="#how-it-works" class="nav-link">How it works</a>
+    <a href="/legal" class="nav-link legal-link">Legal & Disclaimer</a>
+  </nav>
+</header>
 <body>
 
   <header>
